manifest/app/querier/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  template:
    spec:
      serviceAccountName: member
      containers:
      - name: app
        securityContext:
          runAsUser: 0
        readinessProbe:
          httpGet: 
            path: /api/member/health
        livenessProbe:
          httpGet: 
            path: /api/member/health
