manifest/app/querier/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: querier
  name: querier-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.global-static-ip-name: nginx-ingress
spec:
  ingressClassName: ingress-gateway
  tls:
    - hosts:
      - devopslabs.pepago.my.id
      secretName: querier-tls
  rules:
    - host: devopslabs.pepago.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: querier
                port:
                  number: 3000
